force-app/main/default/objects/ProductRequest/fields/CompanyKind__c.field-meta.xml
<CustomField>
    <fullName>CompanyKind__c</fullName>
    <label>Company Kind</label>
    <length>1</length>
    <type>Text</type>
</CustomField>