force-app/main/default/objects/ProductRequest/fields/DAOSCancelledQty__c.field-meta.xml
<CustomField>
    <fullName>DAOSCancelledQty__c</fullName>
    <label>Cancelled Qty (DAOS)</label>
    <summarizedField>ProductRequestLineItem.DAOSCancelledQty__c</summarizedField>
    <summaryForeignKey>ProductRequestLineItem.ParentId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>