force-app/main/default/objects/ProductRequest/fields/DAOSConfirmQty__c.field-meta.xml
<CustomField>
    <fullName>DAOSConfirmQty__c</fullName>
    <label>Confirm Qty (DAOS)</label>
    <summarizedField>ProductRequestLineItem.DAOSConfirmQty__c</summarizedField>
    <summaryForeignKey>ProductRequestLineItem.ParentId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>