force-app/main/default/objects/ProductRequest/fields/DAOSOrderProcessingCode__c.field-meta.xml
<CustomField>
    <fullName>DAOSOrderProcessingCode__c</fullName>
    <label>Order Processing Code (DAOS)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>