force-app/main/default/objects/ProductRequest/fields/DAOSPDCCode__c.field-meta.xml
<CustomField>
    <fullName>DAOSPDCCode__c</fullName>
    <label>PDC Code (DAOS)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>