force-app/main/default/objects/ProductRequest/fields/DAOSReturnCode__c.field-meta.xml
<CustomField>
    <fullName>DAOSReturnCode__c</fullName>
    <label>Return Code (DAOS)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>