force-app/main/default/objects/ProductRequest/fields/DAOSReturnMessage__c.field-meta.xml
<CustomField>
    <fullName>DAOSReturnMessage__c</fullName>
    <label>Return Message (DAOS)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>