force-app/main/default/objects/ProductRequest/fields/DAOSReturnSQLCode__c.field-meta.xml
<CustomField>
    <fullName>DAOSReturnSQLCode__c</fullName>
    <label>Return SQL Code (DAOS)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>