force-app/main/default/objects/ProductRequest/fields/DAOSSubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>DAOSSubmittedDate__c</fullName>
    <label>Submitted Date (DAOS)</label>
    <type>DateTime</type>
</CustomField>