force-app/main/default/objects/ProductRequest/fields/ExternalIdCXP__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdCXP__c</fullName>
    <description>ODS_CRP + ODS_DLR_CD + ODS_DLR_ORD_NO</description>
    <externalId>true</externalId>
    <label>External Id (CXP)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>