force-app/main/default/objects/ProductRequest/fields/IsAutomated__c.field-meta.xml
<CustomField>
    <fullName>IsAutomated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>자동 발주(배치) 여부</description>
    <label>IsAutomated</label>
    <type>Checkbox</type>
</CustomField>