force-app/main/default/objects/ProductRequest/fields/OrderNoCXP__c.field-meta.xml
<CustomField>
    <fullName>OrderNoCXP__c</fullName>
    <description>생성규칙 (Order일자) + 주문헤더 갯수 (현재 최고값 + 1) (법인코드 + 딜러코드별)
  - YYYY(4)+MM(2)+DD(2)+SEQ(2)</description>
    <label>Order No (CXP)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>