force-app/main/default/objects/ProductRequest/fields/OrderNoDAOS__c.field-meta.xml
<CustomField>
    <fullName>OrderNoDAOS__c</fullName>
    <label>Order No (DAOS)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>