force-app/main/default/objects/ProductRequest/fields/ru_DAOSLastBOQty__c.field-meta.xml
<CustomField>
    <fullName>ru_DAOSLastBOQty__c</fullName>
    <label>Last BO Qty (DAOS)</label>
    <summarizedField>ProductRequestLineItem.DAOSLastBOQty__c</summarizedField>
    <summaryForeignKey>ProductRequestLineItem.ParentId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>