force-app/main/default/objects/ProductRequest/fields/ru_DAOSProcessingQty__c.field-meta.xml
<CustomField>
    <fullName>ru_DAOSProcessingQty__c</fullName>
    <label>Processing Qty (DAOS)</label>
    <summarizedField>ProductRequestLineItem.DAOSProcessingQty__c</summarizedField>
    <summaryForeignKey>ProductRequestLineItem.ParentId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>