force-app/main/default/objects/ProductRequest/fields/ru_DAOSShippedQty__c.field-meta.xml
<CustomField>
    <fullName>ru_DAOSShippedQty__c</fullName>
    <label>Shipped Qty (DAOS)</label>
    <summarizedField>ProductRequestLineItem.DAOSShippedQty__c</summarizedField>
    <summaryForeignKey>ProductRequestLineItem.ParentId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>