force-app/main/default/objects/ProductRequest/fields/ru_OrderQty__c.field-meta.xml
<CustomField>
    <fullName>ru_OrderQty__c</fullName>
    <label>Order Qty</label>
    <summarizedField>ProductRequestLineItem.QuantityRequested</summarizedField>
    <summaryForeignKey>ProductRequestLineItem.ParentId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>