force-app/main/default/objects/ProductRequest/fields/ShipMode__c.field-meta.xml
<CustomField>
    <fullName>ShipMode__c</fullName>
    <label>Ship Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
                <default>true</default>
                <label>G</label>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>