force-app/main/default/objects/ProductRequest/fields/TransmissionDate__c.field-meta.xml
<CustomField>
    <fullName>TransmissionDate__c</fullName>
    <label>Transmission Date</label>
    <type>DateTime</type>
</CustomField>