force-app/main/default/objects/ProductRequest/validationRules/AfterSales_Product_Request_Modified_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>AfterSales_Product_Request_Modified_Date</fullName>
    <active>true</active>
    <errorConditionFormula>DAOSSubmittedDate__c  &gt;  DAOSLastModifiedDate__c
&amp;&amp;
$Profile.Name != &quot;DIH Integration Profile&quot;</errorConditionFormula>
    <errorDisplayField>DAOSLastModifiedDate__c</errorDisplayField>
    <errorMessage>LastModifiedDate Cannot be before SubmittedDate</errorMessage>
</ValidationRule>